WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163190
[GTK] 2.14.0 Compile Errors: GTK 3.22.1
https://bugs.webkit.org/show_bug.cgi?id=163190
Summary
[GTK] 2.14.0 Compile Errors: GTK 3.22.1
musl100-bes
Reported
2016-10-09 17:44:57 PDT
Arch Linux. Compiling with -DENABLE_OPENGL=OFF results in: [ 96%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/WebResourceLoadStatisticsStore.cpp.o /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/AcceleratedDrawingAreaProxy.cpp: In member function ‘void WebKit::AcceleratedDrawingAreaProxy::setNativeSurfaceHandleForCompositing(uint64_t)’: /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/AcceleratedDrawingAreaProxy.cpp:271:129: error: ‘DispatchMessageEvenWhenWaitingForSyncReply’ is not a member of ‘IPC’ essages::DrawingArea::SetNativeSurfaceHandleForCompositing(handle), m_webPageProxy.pageID(), IPC::DispatchMessageEvenWhenWaitingForSyncReply); ^~~ make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/build.make:12590: Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/AcceleratedDrawingAreaProxy.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[1]: *** [CMakeFiles/Makefile2:1101: Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 make: *** [Makefile:150: all] Error 2 ==> ERROR: A failure occurred in build(). Aborting... ...while compiling with -DENABLE_OPENGL=ON results in: [ 97%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/gtk/InputMethodFilter.cpp.o /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/gtk/AcceleratedBackingStoreX11.cpp: In lambda function: /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/gtk/AcceleratedBackingStoreX11.cpp:158:53: error: ‘gtk_widget_queue_draw’ was not declared in this scope gtk_widget_queue_draw(m_webPage.viewWidget()); ^ make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/build.make:14870: Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/gtk/AcceleratedBackingStoreX11.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[1]: *** [CMakeFiles/Makefile2:1143: Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 make: *** [Makefile:150: all] Error 2 ==> ERROR: A failure occurred in build(). Aborting... What is a possoble workaround/resolution?
Attachments
Patch
(1.18 KB, patch)
2016-10-10 08:18 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-10-09 23:49:25 PDT
(In reply to
comment #0
)
> Arch Linux. Compiling with -DENABLE_OPENGL=OFF results in: > > [ 96%] Building CXX object > Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/ > WebResourceLoadStatisticsStore.cpp.o > /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/ > AcceleratedDrawingAreaProxy.cpp: In member function ‘void > WebKit::AcceleratedDrawingAreaProxy:: > setNativeSurfaceHandleForCompositing(uint64_t)’: > /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/ > AcceleratedDrawingAreaProxy.cpp:271:129: error: > ‘DispatchMessageEvenWhenWaitingForSyncReply’ is not a member of ‘IPC’ > essages::DrawingArea::SetNativeSurfaceHandleForCompositing(handle), > m_webPageProxy.pageID(), IPC::DispatchMessageEvenWhenWaitingForSyncReply); > > ^~~ > make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/build.make:12590: > Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/AcceleratedDrawingAreaProxy. > cpp.o] Error 1 > make[2]: *** Waiting for unfinished jobs.... > make[1]: *** [CMakeFiles/Makefile2:1101: > Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 > make: *** [Makefile:150: all] Error 2 > ==> ERROR: A failure occurred in build(). > Aborting...
This was already fixed in
r206806
, and will be merged in 2.14 branch too.
> ...while compiling with -DENABLE_OPENGL=ON results in: > > [ 97%] Building CXX object > Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/gtk/InputMethodFilter.cpp.o > /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/gtk/ > AcceleratedBackingStoreX11.cpp: In lambda function: > /tmp/webkit2gtk/src/webkitgtk-2.14.0/Source/WebKit2/UIProcess/gtk/ > AcceleratedBackingStoreX11.cpp:158:53: error: ‘gtk_widget_queue_draw’ was > not declared in this scope > gtk_widget_queue_draw(m_webPage.viewWidget()); > ^ > make[2]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/build.make:14870: > Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/gtk/ > AcceleratedBackingStoreX11.cpp.o] Error 1 > make[2]: *** Waiting for unfinished jobs.... > make[1]: *** [CMakeFiles/Makefile2:1143: > Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 > make: *** [Makefile:150: all] Error 2 > ==> ERROR: A failure occurred in build(). > Aborting... > > What is a possoble workaround/resolution?
Here we just need to include gtk.h
Carlos Garcia Campos
Comment 2
2016-10-10 08:18:25 PDT
Created
attachment 291105
[details]
Patch I guess this should fix the build.
WebKit Commit Bot
Comment 3
2016-10-10 09:19:27 PDT
Comment on
attachment 291105
[details]
Patch Clearing flags on attachment: 291105 Committed
r206998
: <
http://trac.webkit.org/changeset/206998
>
WebKit Commit Bot
Comment 4
2016-10-10 09:19:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug