[GTK] 2.14.0 Compile Errors: GTK 3.22.1 https://bugs.webkit.org/show_bug.cgi?id=163190

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2016-10-10
Reviewed by Alex Christensen.

* UIProcess/gtk/AcceleratedBackingStoreX11.cpp: Include gtk.h since we are using gtk_widget_queue_draw().

Canonical link: https://commits.webkit.org/181046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206998 268f45cc-cd09-0410-ab3c-d52691b4dbfc